# Onlyfans-notifications

./: .gitignore  Cargo.toml  README.md  SETTINGS.md  auth.json  settings.json
.github/workflows/: build.yaml
client/: Cargo.toml
client/src/: client.rs  deserializers.rs  lib.rs
client/src/structs/: content.rs  media.rs  mod.rs  user.rs
daemon/: Cargo.toml
daemon/src/: deserializers.rs  lib.rs  socket.rs  structs.rs
of-client/: Cargo.toml
of-client/src/: drm.rs  lib.rs  rules.rs
of-client/src/structs/: content.rs  media.rs  user.rs
of-daemon/: Cargo.toml
of-daemon/src/: lib.rs  socket.rs  structs.rs
of-deserializers/: Cargo.toml
of-deserializers/src/: lib.rs
src/: client.rs  deserializers.rs  handlers.rs  helpers.rs  lib.rs  main.rs  message_types.rs  settings.rs  socket.rs  structs.rs  websocket_client.rs
src/settings/: actions.rs  concrete.rs  mod.rs  selection.rs
src/structs/: content.rs  media.rs  mod.rs  socket.rs  user.rs
tests/: init.rs  socket.rs  user.rs
