[package]
name = "of-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = "2.0.4"
anyhow = "1.0.66"

log = "0.4.17"
simplelog = "0.12.0"

winit = "0.30.5"
tray-icon = "0.19.2"
winrt-toast = "0.1.1"
tokio = { version = "1.29.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
futures = "0.3.21"
futures-util = "0.3.21"

nanohtml2text = "0.2.1"
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }

rand = "0.8.5"
rand_distr = "0.4.3"

chrono = "0.4.19"
tempdir = "0.3.7"
filetime = "0.2.17"
of-client = { version = "0.1.0", path = "client" }
