[package]
name = "of-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"client",
	"daemon",
]

[workspace.dependencies]
log = "0.4.17"
thiserror = "2.0.4"
futures = "0.3.21"
futures-util = "0.3.21"
serde_json = "1.0.82"
tokio = "1.29.0"
serde = { version = "1.0.140", features = ["derive"] }
reqwest = "0.12.5"
chrono = "0.4.19"

[dependencies]
thiserror = { workspace = true }
anyhow = "1.0.66"

log = { workspace = true, features = ["serde"] }
simplelog = "0.12.0"

winit = "0.30.5"
tray-icon = "0.19.2"
winrt-toast = "0.1.1"

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
reqwest = { workspace = true, features = ["stream"] }
futures-util = { workspace = true }
futures = { workspace = true }

serde_json = { workspace = true }
serde = { workspace = true }
nanohtml2text = "0.2.1"
cookie = "0.18.1"

chrono = { workspace = true }
tempdir = "0.3.7"
filetime = "0.2.17"

base16 = "0.2"
ffmpeg-sidecar = "2.0.5"

of-client = { path = "client", features = ["drm"] }
of-socket = { path = "daemon" }