cargo-features = ["trim-paths"]

[package]
name = "of-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"client",
	"daemon",
]

[workspace.dependencies]
log = "0.4.22"
thiserror = "2.0.9"
futures = "0.3.21"
futures-util = "0.3.21"
serde_json = "1.0.134"
tokio = "1.42.0"
serde = { version = "1.0.216", features = ["derive"] }
reqwest = "0.12.9"
chrono = "0.4.39"

[dependencies]
thiserror = { workspace = true }
anyhow = "1.0.95"

log = { workspace = true, features = ["serde"] }
simplelog = "0.12.2"

winit = "0.30.8"
tray-icon = "0.19.2"
winrt-toast = "0.1.1"

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
reqwest = { workspace = true, features = ["stream"] }
futures-util = { workspace = true }
futures = { workspace = true }

serde_json = { workspace = true }
serde = { workspace = true }
nanohtml2text = "0.2.1"
cookie = "0.18.1"

chrono = { workspace = true }
tempfile = "3.14.0"
filetime = "0.2.25"

base16 = "0.2"
ffmpeg-sidecar = "2.0.5"

of-client = { path = "client", features = ["drm"] }
of-socket = { path = "daemon" }

[patch.crates-io]
winrt-toast = { git = "https://github.com/GentleMercenary/winrt-toast.git" }

[profile.release]
strip = true
trim-paths = true
panic = "abort"