[package]
name = "of-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
futures = "0.3.21"
futures-util = "0.3.21"
strip_markdown = "0.2.0"
serde = { version = "1.0.140", features = ["derive"] }
rust-crypto = "0.2.36"
cached = { version = "0.51.4", features = ["async"] }
chrono = "0.4.19"
reqwest = { version = "0.12.5", features = ["cookies", "gzip", "json", "stream"] }
