[package]
name = "of-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
cached = { version = "0.51.4", features = ["async"] }
reqwest = { workspace = true, features = ["cookies", "gzip", "json"] }
reqwest_cookie_store = "0.8.0"
rust-crypto = "0.2.36"
httpdate = "1.0.3"