[package]
name = "of-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
cached = { version = "0.54.0", features = ["async"] }
reqwest = { workspace = true, features = ["cookies", "gzip", "json"] }
reqwest_cookie_store = "0.8.0"
sha1_smol = "1.0.1"
httpdate = "1.0.3"

widevine = { version = "0.1.0", optional = true }
minidom = { version = "0.16.0", optional = true }
thiserror = { workspace = true, optional = true }

[features]
default = ["drm"]
drm = ["dep:widevine", "dep:minidom", "dep:thiserror"]
