[package]
name = "of-socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
chrono = { workspace = true, features = ["serde"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
serde_json = { workspace = true }
serde = { workspace = true }
rand_distr = "0.4.3"
rand = "0.8.5"

of-client = { path = "../client" }